# nc-capture-key

./: README.md
ai-doc/desktop/tauri/: 01-prerequisites.md
architecture/desktop/tauri/: 03-run-project.md  06-build.md
architecture/installers/linux/: desktop-nc-capture-key-0.1.0-1.x86_64.rpm  desktop-nc-capture-key_0.1.0_amd64.deb
data/desktop/doc/desicions/: 02-context.md
data/desktop/opencode/skills/tests/: skills.md
desktop-nc-capture-key/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-nc-capture-key-old/: package-lock.json  package.json
desktop-nc-capture-key-old/src-tauri/src/: main.rs
desktop-nc-capture-key-old/src/layouts/: main-layout.ts
desktop-nc-capture-key-old/src/views/page-about/sections/: section-about-mobile.ts
desktop-nc-capture-key/src-tauri/: Cargo.toml  tauri.conf.json
desktop-nc-capture-key/src-tauri/src/: main.rs
desktop-nc-capture-key/src/layouts/: main-layout.ts
desktop-nc-capture-key/src/router/: router.ts
desktop-nc-capture-key/src/views/page-about/: page-about-desktop.ts  page-about-mobile.ts
desktop-nc-capture-key/src/views/page-home/: page-home-desktop.ts  page-home-mobile.ts
desktop-nc-capture-key/src/views/page-page01/: index.ts  page-page01-desktop.ts  page-page01-mobile.ts
desktop-nc-capture-key/src/views/page-page02/: index.ts  page-page02-desktop.ts  page-page02-mobile.ts
desktop-nc-capture-key/src/views/page-page03/: index.ts  page-page03-desktop.ts  page-page03-mobile.ts
doc/desktop/tauri/: 02-create-project.md
(+11 files in other folders)
